@@ -3,4 +3,4 @@ Author: Vincent Fourmond <fourmond@debian.org>
 Info: This script extracts information from manifests of JAR files
 Type: binary
 Version: 1
-Needs-Info: unpacked
+Needs-Info: unpacked, index
