@@ -38,6 +38,8 @@ lintian (2.5.7) UNRELEASED; urgency=low
   * checks/menus{,.desc}:
     + [NT] Remove "manual" lazy load of data file.
 
+  * collection/*:
+    + [NT] Use Lintian::Collect to access the package index.
   * collection/file-info{,.desc}:
     + [NT] Compress file-info output and bump version of file-info.
   * collection/objdump-info:
